--- a/configs/env.props
+++ b/configs/env.props
@@ -1,18 +1,18 @@
-envatoPurchaseCode=put-your-envato-purchase-code-here
-appName=FluxStore
-iosBundleId=com.inspireui.mstore.flutter
-iosBundleIdOneSignal=com.inspireui.mstore.flutter.onesignal
-iosAppGroups=group.com.inspireui.mstore.flutter.onesignal
-iosMerchantId=merchant.com.inspireui.mstore.flutter
-androidPackageName=com.inspireui.fluxstore
-websiteUrl=https://inspireui.com
-websiteDomain=inspireui.com
+envatoPurchaseCode=7b957895-623e-4d84-8142-ce2d0a31aab8
+appName=شاركنا
+iosBundleId=com.digistacks.sharkna
+iosBundleIdOneSignal=com.digistacks.sharkna.onesignal
+iosAppGroups=group.com.digistacks.sharkna.onesignal
+iosMerchantId=merchant.com.digistacks.sharkna
+androidPackageName=com.digistacks.sharkna
+websiteUrl=https://sharkqna.com
+websiteDomain=sharkqna.com
 customScheme=fluxstore
 iosApsEnvironment=development
-firebaseDynamicUrl=fluxstoreinspireui.page.link
-googleReversedClientId=com.googleusercontent.apps.412823237422-pf5dr3f75n6r201u24ocioin54u3cseq
-googleApiKeyAndroid=AIzaSyDSNYVC-8DU9BTcyqkeN9c5pgVhwOBAvGg
-googleApiKeyIos=AIzaSyDnBpxFOfeG6P06nK97hMg01kEgX48JhLE
+firebaseDynamicUrl=sharkna.page.link
+googleReversedClientId=com.googleusercontent.apps.861681596926-b16c84kio5m5tbjituqiqo99fpllsr04
+googleApiKeyAndroid=AIzaSyAZPRGifN_vwU-E_BYL9YZ-LU-L3_x93ls
+googleApiKeyIos=AIzaSyACepZht3NZR4K0QFNyhjN5u9cgTL89_lQ
 adMobAppIdAndroid=ca-app-pub-7432665165146018~2664444130
 adMobAppIdIos=ca-app-pub-7432665165146018~2664444130
 facebookAppId=430258564493822
