--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,23 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>412823237422-pf5dr3f75n6r201u24ocioin54u3cseq.apps.googleusercontent.com</string>
+	<string>861681596926-b16c84kio5m5tbjituqiqo99fpllsr04.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.412823237422-pf5dr3f75n6r201u24ocioin54u3cseq</string>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>412823237422-3d7l4tv9d524qds81062g6vfr588u9rg.apps.googleusercontent.com</string>
+	<string>com.googleusercontent.apps.861681596926-b16c84kio5m5tbjituqiqo99fpllsr04</string>
 	<key>API_KEY</key>
-	<string>AIzaSyA2BWeKRw-D7zHLnvVVoi6ahOqyucoa9s0</string>
+	<string>AIzaSyACepZht3NZR4K0QFNyhjN5u9cgTL89_lQ</string>
 	<key>GCM_SENDER_ID</key>
-	<string>412823237422</string>
+	<string>861681596926</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.inspireui.mstore.flutter</string>
+	<string>com.digistacks.sharkna</string>
 	<key>PROJECT_ID</key>
-	<string>fluxstore-inspireui</string>
+	<string>sharknaapp-ff411</string>
 	<key>STORAGE_BUCKET</key>
-	<string>fluxstore-inspireui.appspot.com</string>
+	<string>sharknaapp-ff411.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,8 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:412823237422:ios:8947f503f8cb2000fb40bf</string>
-	<key>DATABASE_URL</key>
-	<string>https://fluxstore-inspireui.firebaseio.com</string>
+	<string>1:861681596926:ios:8d791a87261d9d4c56a8af</string>
 </dict>
 </plist>
